NarForumUser/NarForumUser/wwwroot/css/app.css
/* ... */
.blog-comment-area {
    color: var(--color-fg);
}

.list-group.list-group-flush li.list-group-item a {
    color: var(--color-a-fg);
} 
/* sidepanel */
.sidebar-container {
    padding: 0 10px;
}

.recent-heading-list-container {
    border-radius: 5px;
    background: var(--color-recent-heading-list-bg);
    padding: 0;
}

.sidebar-component-container {
    border-radius: 5px;
    background: var(--color-sidebar-component-container-bg);
    padding: 0;
}

.sidebar-title {
    margin-bottom: 0px;
    padding: 10px 5px;
    width: 100%;
    display: block;
    font-size: 15px;
    line-height: 18px;
    border: 1px solid #34485f;
    background: #34485f;
    color: #eaeaea;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.no-image-user-profile {
    opacity: .6;
    display: block;
    width: 35px;
    height: 35px;
    border-radius: 0.25rem;
    background: #512DA8;
    font-size: 17.5px;
    color: #fff;
    text-align: center;
    line-height: 35px;
}



.no-image-user-profile-post {
    display: inline-block;
    width: 45px;
    height: 45px;
    border-radius: 10%;
    background: #512DA8;
    font-size: 22.5px;
    color: #fff;
    text-align: center;
    line-height: 45px;
    float:left;
}

.no-image-user-profile-heading-card {
    display: inline-block;
    width: 35px;
    height: 35px;
    border-radius: 50%;
    background: #512DA8;
    font-size: 17.5px;
    color: #fff;
    text-align: center;
    line-height: 35px;
    float: left;
}

.no-image-user-profile-top-nav-menu {
    display: inline-block;
    width: 32px;
    height: 32px;
    border-radius: 50%;
    background: #512DA8;
    font-size: 16px;
    color: #fff;
    text-align: center;
    line-height: 32px;
    float: left;
}

.image-user-profile-post {
    display: inline-block;
    width: 45px;
    height: 45px;
    border-radius: 10%;
    background: #ddd;
    font-size: 15px;
    color: #fff;
    text-align: center;
    line-height: 30px;
    float: left;
}



.user-info-post-number {
    font-size: 12px;
    color: var(--color-mini-post-user-info-fg);
}

.no-image-user-profile-link {
    text-decoration: none;
    align-content: center;
}

.recent-heading-title {
    font-size: 14px;
    margin-bottom: 0;
}

.recent-heading-title a {
    text-decoration: none;
    color: var(--color-a-fg);
}

.recent-heading-title-info {
    display: flex;
    justify-content: space-between;
    color: var(--color-fg);
}

.recent-heading-category-badge {
    background: var(--color-recent-heading-category-badge-bg);
    color: var(--color-recent-heading-category-badge-fg);
    font-size: 10px;
}

.recent-heading-list {
    padding: 5px;
    border: 1px solid #dddddd;
    border-color: var(--color-recent-heading-list-border);
    border-top: none;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
}

.user-settings-button {
    float: right;
    font-size: 14px;
    font-weight: 500;
    padding: 5px;
    border: 1px solid var(--color-button-border);
    border-radius: 5px;
    background: var(--color-button-bg);
    cursor: pointer;
    position: relative;
    color: var(--color-fg);
}

.user-profile-no-image {
    width: 100%;
    justify-content: center;
    display: flex;
}

.no-image-user {
    background: #f1f1f1;
    width: 150px;
    height: 150px;
    /* padding: 10px; */
    border-radius: 15%;
    font-size: 70px;
    color: #8f8f8f;
    line-height: 150px;
}

.user-settings-title {
    font-size: 35px;
    margin-bottom: 40px;
}

.unvisible-input-file {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    background: pink;
    cursor: pointer;
    top: 0;
    left: 0;
}

.user-settings-button input[type=file]::-webkit-file-upload-button {
    opacity: 0;
    cursor: pointer;
}

.profile-image-user {
    width: 150px;
    height: 150px;
}

.image-user-profile {
    opacity: 1;
    display: block;
    position: relative;
    width: 35px;
    height: 35px;
    border-radius: 0.25rem;
    background: #c7c7c7;
    font-size: 17.5px;
    color: #fff;
    text-align: center;
    line-height: 35px;
}

.image-user-profile img {
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 10%;
}

.image-user-profile-heading-card {
    opacity: 1;
    display: block;
    position: relative;
    width: 35px;
    height: 35px;
    border-radius: 50%;
    background: #c7c7c7;
    font-size: 17.5px;
    color: #fff;
    text-align: center;
    line-height: 35px;
}

.image-user-profile-heading-card img {
    position: absolute;
    top: 0;
    left: 0;
    border-radius: 50%;
}

.image-user-profile-post img {
    border-radius: 10%;
}

.image-user-profile-blog-comment {
    opacity: 1;
    display: block;
    position: relative;
    width: 65px;
    height: 65px;
    border-radius: 0.25rem;
    background: #c7c7c7;
    font-size: 32.5px;
    color: #fff;
    text-align: center;
    line-height: 65px;
}

.image-user-profile-blog-comment img {
    position: absolute;
    top: 0;
    left: 0;
}

.image-gallery {
    max-height: 300px;
    overflow-y: scroll;
}

.image-gallery-item {
    width: 120px;
    height: 90px;
    padding: 2px;
    border: 3px solid #f1f1f1;
    outline: 1px solid #ddd;
    border-radius: 5px;
    margin: 5px;
}

.image-gallery-item.selected {
    border: 3px solid #34485f;
    outline: 1px solid #ddd;
}

h3.blog-comment-title {
    margin-top: 50px;
}

h3.blog-comment-form-title {
    margin-top: 50px;
}

.forum-footer {
    background: var(--color-footer-bg);
    color: var(--color-footer-fg);
    margin-top: 50px;
}

.forum-footer a {
    color: #5e5e5e;
    text-decoration: none;
    font-size: 14px;
    font-weight: 500;
}

#forum-logo-login {
    background: #34485f;
    padding: 5px;
    border-radius: 5px;
    opacity: .4;
}

#forum-logo-footer {
    background: var(--color-forum-logo-footer-bg);
    padding: 5px;
    border-radius: 5px;
    opacity: .4;
    width: 140px;
}
/* ... */

